--- a/easybank-landing-page/index.html
+++ b/easybank-landing-page/index.html
@@ -1,13 +1,163 @@
 <!doctype html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Easy Bank Landing Page</title>
+    <link rel="stylesheet" href="index.css">
   </head>
+
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <header class="header">
+      <a href="#"><img src="assets/logo.svg" alt="Easybank logo and text" /></a>
+
+      <button id="header__btn--hamburger" class="header__btn--hamburger">
+        <img src="assets/header/icon-hamburger.svg" id="btn__hamburger--img" alt="Hamburger Menu Icon"
+          class="btn__hamburger--img" />
+      </button>
+
+      <nav class="header__nav">
+        <a href="#" title="Home">Home</a>
+        <a href="#" title="About">About</a>
+        <a href="#" title="Contact">Contact</a>
+        <a href="#" title="Blog">Blog</a>
+        <a href="#" title="Careers">Careers</a>
+      </nav>
+      <button class="header__button">Request Invite</button>
+    </header>
+
+    <main>
+      <section class="hero">
+        <div class="hero__img--bg">
+          <img src="assets/image-mockups.png" alt="Smartphones using easybank app" class="hero__img" />
+        </div>
+        <div class="hero__text--padding">
+          <h1 class="hero__text--header">Next generation digital banking</h1>
+          <p class="hero__text--content">Take your financial life online. Your Easybank account will be a one-stop
+            shop for spending, saving, budgeting, investing, and much more.</p>
+          <button class="hero__button">Request Invite</button>
+        </div>
+      </section>
+
+      <section class="about">
+        <div>
+          <h2 class="about__text--header">Why choose Easybank?</h2>
+          <p class="about__text--content">We leverage Open Banking to turn your bank account into your financial
+            hub. Control your finances like never before.</p>
+        </div>
+        <div class="about__grid">
+          <div>
+            <img src="assets/about/icon-online.svg" alt="Online Banking" />
+            <h3 class="about__text--subheader">Online Banking</h3>
+            <p class="about__text--content">Our modern web and mobile applications allow you to keep track of your
+              finances wherever you are in the world.</p>
+          </div>
+          <div>
+            <img src="assets/about/icon-budgeting.svg" alt="Simple Budgeting" />
+            <h3 class="about__text--subheader">Simple Budgeting</h3>
+            <p class="about__text--content">See exactly where your money goes each month. Receive notifications when
+              you"re close to your hitting limits.</p>
+          </div>
+          <div>
+            <img src="assets/about/icon-onboarding.svg" alt="Fast Onboarding" />
+            <h3 class="about__text--subheader">Fast Onboarding</h3>
+            <p class="about__text--content">We dont" do branches. Open your account in minutes online and start
+              taking control of your finances right away.</p>
+          </div>
+          <div>
+            <img src="assets/about/icon-api.svg" alt="Open API" />
+            <h3 class="about__text--subheader">Open API</h3>
+            <p class="about__text--content">Manage your savings, investments, pension, and much more from one
+              account. Tracking your money has never been easier.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="article">
+        <div>
+          <h2 class="article__text--header">Latest Articles</h2>
+        </div>
+        <div class="article__grid">
+          <div class="article__card">
+            <img src="assets/article-images/image-currency.jpg" alt="Image Currency" class="article__card--img" />
+
+            <div class="article__card--text--box">
+              <p class="article__card--author">By Claire Robinson</p>
+              <h4 class="article__card--title">Receive money in any currency with no fees</h4>
+              <p class="article__card--text--content">Our modern web and mobile applications allow you to keep track
+                of your finances wherever you are in the world.</p>
+            </div>
+          </div>
+          <div class="article__card">
+            <img src="assets/article-images/image-restaurant.jpg" alt="Image Restaurant" class="article__card--img" />
+
+            <div class="article__card--text--box">
+              <p class="article__card--author">By Wilson Hutton</p>
+              <h4 class="article__card--title">Treat yourself without worrying about money</h4>
+              <p class="article__card--text--content">Our simple budgeting feature allows you to separate out your
+                spending and set realistic limits each month. That means you ....</p>
+            </div>
+          </div>
+          <div class="article__card">
+            <img src="assets/article-images/image-plane.jpg" alt="Image Plane" class="article__card--img" />
+
+            <div class="article__card--text--box">
+              <p class="article__card--author">By Wilson Hutton</p>
+              <h4 class="article__card--title">Take your Easybank card wherever you go</h4>
+              <p class="article__card--text--content">We want you to enjoy your travels. This is why we don"t charge
+                any fees on purchases while you"re abroad. We"ll even show you ...</p>
+            </div>
+          </div>
+          <div class="article__card">
+            <img src="assets/article-images/image-confetti.jpg" alt="Image Confetti" class="article__card--img" />
+
+            <div class="article__card--text--box">
+              <p class="article__card--author">By Claire Robinson</p>
+              <h4 class="article__card--title">Our invite-only Beta accounts are now live!</h4>
+              <p class="article__card--text--content">After a lot of hard work by the whole team, we"re excited to
+                launch our closed beta. It"s easy to request an invite through the site ...</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+
+      <div class="footer__column--one">
+        <a href="#"><img src="assets/footer/icon-footer.svg" alt="Easybank Logo" /></a>
+        <div class="footer__social--media">
+          <a href="https://www.facebook.com" target="_blank"><img src="assets/footer/icon-facebook.svg"
+              alt="Facebook Logo" /></a>
+          <a href="https://www.youtube.com" target="_blank"><img src="assets/footer/icon-youtube.svg"
+              alt="Youtube Logo" /></a>
+          <a href="https://www.twitter.com" target="_blank"><img src="assets/footer/icon-twitter.svg"
+              alt="Twitter Logo" /></a>
+          <a href="https://www.pinterest.com" target="_blank"><img src="assets/footer/icon-pinterest.svg"
+              alt="Pinterest Logo" /></a>
+          <a href="https://www.instagram.com" target="_blank"><img src="assets/footer/icon-instagram.svg"
+              alt="Instagram Logo" /></a>
+        </div>
+      </div>
+      <div class="footer__link footer__column--two">
+        <p><a href="#">About Us</a></p>
+        <p><a href="#">Contact</a></p>
+        <p><a href="#">Blog</a></p>
+        <p><a href="#">Careers</a></p>
+        <p><a href="#">Support</a></p>
+        <p><a href="#">Privacy Policy</a></p>
+      </div>
+      <div class="footer__column--three">
+        <button class="footer__button">Request Invite</button>
+        <p class="footer__copyright">&#169; Easybank. All Rights Reserved</p>
+      </div>
+
+
+    </footer>
+
+    <script type="module" src="index.js"></script>
   </body>
+
 </html>
