resolved image paths

--- a/sunnyside-agency-landing-page/index.html
+++ b/sunnyside-agency-landing-page/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg" sizes="32x32" href="/logo.svg">
-    <link rel="stylesheet" href="src/index.css">
+    <link rel="icon" type="image/svg" sizes="32x32" href="images/logo.svg">
+    <link rel="stylesheet" href="index.css">
     <title>Sunnyside Agency</title>
   </head>
 
@@ -13,8 +13,8 @@
 
     <div class="header-bg">
       <header class="header">
-        <img src="public/logo.svg" alt="Sunnyside Logo">
-        <img src="public/header/icon-hamburger.svg" id="hamburger-menu" alt="Hamburger Menu Icon"
+        <img src="images/logo.svg" alt="Sunnyside Logo">
+        <img src="images/header/icon-hamburger.svg" id="hamburger-menu" alt="Hamburger Menu Icon"
           class="hamburger-menu">
         <nav id="header-nav" class="header-nav">
           <a href="#">About</a>
@@ -25,12 +25,12 @@
       </header>
       <section class="hero gs-reveal gs-reveal-fromBottom">
         <h1 class="text-header">We are creatives</h1>
-        <img src="public/header/icon-arrow-down.svg" alt="Arrow Down Header Icon">
+        <img src="images/header/icon-arrow-down.svg" alt="Arrow Down Header Icon">
       </section>
     </div>
 
     <div class="intro">
-      <img src="public/image-transform.jpg" alt="Egg Image with yellow background"
+      <img src="images/image-transform.jpg" alt="Egg Image with yellow background"
         class="img-order img-section-content gs-reveal gs-reveal-fromBottom">
       <section class="section-intro gs-reveal gs-reveal-fromRight">
         <h2 class="section-intro-sub-headers">Transform your brand</h2>
@@ -42,7 +42,7 @@
     </div>
 
     <div class="intro">
-      <img src="public/image-stand-out.jpg" alt="Pink Cup with pink background"
+      <img src="images/image-stand-out.jpg" alt="Pink Cup with pink background"
         class="img-section-content gs-reveal gs-reveal-fromLeft">
       <section class="section-intro gs-reveal gs-reveal-fromRight">
         <h2 class="section-intro-sub-headers">Stand out to the right audience</h2>
@@ -75,7 +75,7 @@
 
       <div class="testimonials-flex">
         <div class="testimonials-item gs-reveal gs-reveal-fromLeft">
-          <img src="public/testimonials/image-emily.jpg" class="testimonials-image" alt="Emily image testimonials">
+          <img src="images/testimonials/image-emily.jpg" class="testimonials-image" alt="Emily image testimonials">
           <p class="testimonials-text">We put our trust in Sunnyside and they delivered, making sure our needs were met
             and deadlines were always hit.</p>
           <p class="name">Emily R.</p>
@@ -83,7 +83,7 @@
         </div>
 
         <div class="testimonials-item gs-reveal gs-reveal-fromLeft">
-          <img src="public/testimonials/image-thomas.jpg" class="testimonials-image" alt="Thomas image testimonials">
+          <img src="images/testimonials/image-thomas.jpg" class="testimonials-image" alt="Thomas image testimonials">
           <p class="testimonials-text">Sunnyside's enthusiasm coupled with their keen interest in our brand’s success
             made it a satisfying and enjoyable experience.</p>
           <p class="name">Thomas S.</p>
@@ -91,7 +91,7 @@
         </div>
 
         <div class="testimonials-item gs-reveal gs-reveal-fromLeft">
-          <img src="public/testimonials//image-jennie.jpg" class="testimonials-image" alt="Jennie image testimonials">
+          <img src="images/testimonials//image-jennie.jpg" class="testimonials-image" alt="Jennie image testimonials">
           <p class="testimonials-text">Incredible end result! Our sales increased over 400% when we worked with
             Sunnyside. Highly recommended!</p>
           <p class="name">Jennie F.</p>
@@ -101,13 +101,13 @@
     </section>
 
     <section class="image-gallery">
-      <img src="public/image-gallery/image-gallery-milkbottles.jpg"
+      <img src="images/image-gallery/image-gallery-milkbottles.jpg"
         class="image-gallery-item gs-reveal gs-reveal-fromLeft" alt="Image gallery milk bottles">
-      <img src="public/image-gallery/image-gallery-orange.jpg" class="image-gallery-item gs-reveal gs-reveal-fromRight"
+      <img src="images/image-gallery/image-gallery-orange.jpg" class="image-gallery-item gs-reveal gs-reveal-fromRight"
         alt="Image gallery sliced orange">
-      <img src="public/image-gallery/image-gallery-cone.jpg" class="image-gallery-item gs-reveal gs-reveal-fromBottom"
+      <img src="images/image-gallery/image-gallery-cone.jpg" class="image-gallery-item gs-reveal gs-reveal-fromBottom"
         alt="Image gallery ice cream cone">
-      <img src="public/image-gallery/image-gallery-sugar-cubes.jpg"
+      <img src="images/image-gallery/image-gallery-sugar-cubes.jpg"
         class="image-gallery-item gs-reveal gs-reveal-fromBottom" alt="Image gallery stacked sugar cubes">
     </section>
 
@@ -146,7 +146,7 @@
       </div>
     </footer>
 
-    <script src="src/app.js"></script>
+    <script src="app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
       integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
       crossorigin="anonymous" referrerpolicy="no-referrer"></script>
