--- a/bookmark-landing-page/index.html
+++ b/bookmark-landing-page/index.html
@@ -4,9 +4,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/svg" href="./images/logo-bookmark.svg">
     <link rel="stylesheet" href="style.css">
 
     <title>Bookmark landing page</title>
