--- a/url-shortening-api-landing-page/index.html
+++ b/url-shortening-api-landing-page/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/logo.svg">
+    <link rel="icon" type="image/svg" sizes="32x32" href="./assets/logo.svg">
     <title>Shortly | URL Shortener</title>
     <link rel="stylesheet" href="./src/scss/main.css">
   </head>
